# llm-structured-semantic-generation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/docker_compose/Envoy/q12/: docker-compose.yaml
data/docker_compose/Envoy/q13/: docker-compose.yaml
data/processed/kubernetes_v1/: README.md  dataset_manifest_prompt_variants.csv  dataset_manifest_samples.csv  dataset_splits.csv  dataset_structural_targets.jsonl  dataset_train_ready.jsonl  dataset_train_ready_samples.jsonl  quality_report.json  structural_targets_report.json
docs/: BASELINE_V1.md  KUBERNETES_MODEL_V1.md  KUBERNETES_PREPROCESSING.md  MULTI_RESOURCE_STRATEGY_DECISION.md  PROJECT.md  STRUCTURAL_TARGETS_V1.md  TERMINOLOGY.md  plantilla_anteproyecto.docx
exploratory/: exploratory.ipynb  moving.ipynb  prompt_profile_report.html
exploratory/data_profiler/: prompt_data_profiler.py
results/baseline_kubernetes_v1/20260423T152024Z/: config.json  metrics.json
results/baseline_kubernetes_v1/20260423T152242Z/: config.json  metrics.json
results/dataset_analysis_kubernetes_v1/: README.md  dataset_analysis_report.html  dataset_analysis_resource_rows.csv  dataset_analysis_sample_features.csv  dataset_analysis_summary.json
scripts/: analyze_kubernetes_dataset.py  build_kubernetes_sft_dataset.py  build_kubernetes_structural_targets.py  run_kubernetes_baseline.py
src/llm_structured_semantic_generation/: __init__.py  dataset_io.py  evaluation.py  sft_serialization.py  structure.py
tests/: test_structural_blocks.py
utils/: kubernetes_dataset_preprocessor.py  memory_utils.py
(+1976 files in other folders)
